# FHIR_inferno

./: parseFhir.py  pyproject.toml
configurations/configuration_fhir_measure_output/: config_cql.ini  config_measure.ini
fhir_inferno.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
